syntax = "proto3";

package comments;
option go_package = "github.com/ben-toogood/kite/comments";
import "google/protobuf/timestamp.proto";

service CommentsService {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Get(GetRequest) returns (GetResponse);
  rpc Delete(DeleteRequest) returns (DeleteResponse);
}

enum ResourceType {
  RESOURCE_TYPE_UNSPECIFIED = 0;
  RESOURCE_TYPE_POST = 1;
}

message Comment {
  string id = 1;
  ResourceType resource_type = 2;
  string resource_id = 3;
  string author_id = 4;
  string message = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message CreateRequest {
  ResourceType resource_type = 1;
  string resource_id = 2;
  string author_id = 3;
  string message = 4;
}

message CreateResponse {
  Comment comment = 1;
}

message GetRequest {
  ResourceType resource_type = 1;
  repeated string resource_ids = 2;
}

message Comments {
  repeated Comment comments = 1;
}

message GetResponse {
  map<string,Comments> resources = 1;
}

message DeleteRequest {
  string id = 1;
}

message DeleteResponse {}