syntax = "proto3";

package followers;
option go_package = "github.com/ben-toogood/kite/followers";

service FollowersService {
  rpc GetFollowers(GetFollowersRequest) returns (GetFollowersResponse);
  rpc GetFollowing(GetFollowingRequest) returns (GetFollowingResponse);
	rpc Follow(FollowRequest) returns (FollowResponse);
	rpc Unfollow(UnfollowRequest) returns (UnfollowResponse);
}

enum ResourceType {
  RESOURCE_TYPE_UNSPECIFIED = 0;
  RESOURCE_TYPE_USER = 1;
}

message GetFollowersRequest {
  ResourceType resource_type = 1;
  string resource_id = 2;
}

message Resource {
  ResourceType type = 1;
  string id = 2;
}

message GetFollowersResponse {
  repeated Resource followers = 1;
}

message GetFollowingRequest {
  ResourceType resource_type = 1;
  string resource_id = 2;
}

message GetFollowingResponse {
  repeated Resource following = 1;
}

message CountRequest {
  ResourceType resource_type = 1;
  string resource_id = 2;
}

message CountResponse {
  int32 count = 1;
}

message FollowRequest {
  ResourceType follower_type = 1;
  string follower_id = 2;
  ResourceType following_type = 3;
  string following_id = 4;
}

message FollowResponse {}

message UnfollowRequest {
  ResourceType follower_type = 1;
  string follower_id = 2;
  ResourceType following_type = 3;
  string following_id = 4;
}

message UnfollowResponse {}